[gd_scene load_steps=3 format=3 uid="uid://db1j83qba7eyj"]

[ext_resource type="Script" path="res://CellularMusicChatGPT/MusicPlaying.gd" id="1"]
[ext_resource type="Theme" uid="uid://dueujeo1gy1ky" path="res://FontTheme.tres" id="2"]

[node name="PanelContainer" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource("2")
script = ExtResource("1")

[node name="MusicPlaying" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="CheckBox" type="CheckBox" parent="MusicPlaying"]
layout_mode = 2

[node name="Button" type="Button" parent="MusicPlaying"]
layout_mode = 2
size_flags_vertical = 4
text = "Play"

[node name="Label" type="Label" parent="MusicPlaying"]
layout_mode = 2
size_flags_horizontal = 3
text = "Title: Data Sound"
clip_text = true

[node name="LineEdit2" type="LineEdit" parent="MusicPlaying"]
layout_mode = 2
size_flags_vertical = 4
text = "0.0"

[node name="Label2" type="Label" parent="MusicPlaying"]
layout_mode = 2
text = "/ 0.0 /"

[node name="LineEdit" type="LineEdit" parent="MusicPlaying"]
layout_mode = 2
size_flags_vertical = 4
text = "300.0"

[node name="LineItemMusic" type="AudioStreamPlayer" parent="."]

[connection signal="pressed" from="MusicPlaying/Button" to="." method="_on_Button_pressed"]
